# experiment3

./: Makefile.am  configure.ac
doc/: design.txt
src/: Makefile.am
src/core/: font.cc  image.cc  image.h  log.h  matrix3.cc  node.cc  node.h  port.h  precompile.h  rectangle.cc  rectangle.h  texture.h  vector2.cc  vector2.h  window.cc
